force-app/main/default/objects/NAB_Legacy_Field_History__c/NAB_Legacy_Field_History__c.object-meta.xml
<CustomObject>
    <label>NAB Legacy Field History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NAB Legacy Field History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAB Legacy Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>