force-app/main/default/objects/NAB_Legacy_Field_History__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NAB Legacy Field History</relationshipLabel>
    <relationshipName>NAB_Legacy_Field_History</relationshipName>
    <type>Lookup</type>
</CustomField>