force-app/main/default/objects/NAB_Legacy_Field_History__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>Compliance__c</referenceTo>
    <relationshipLabel>NAB Legacy Field History</relationshipLabel>
    <relationshipName>NAB_Legacy_Field_History</relationshipName>
    <type>Lookup</type>
</CustomField>