force-app/main/default/objects/NAB_Legacy_Field_History__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NAB Legacy Field History</relationshipLabel>
    <relationshipName>NAB_Legacy_Field_History</relationshipName>
    <type>Lookup</type>
</CustomField>