force-app/main/default/objects/NAB_Legacy_Field_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>