force-app/main/default/objects/NAB_Legacy_Field_History__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Value</label>
    <type>TextArea</type>
</CustomField>